Fix button being hidden by the first card

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 .less-more {
   display: flex;
   justify-content: space-between;
+  padding: 0 100px;
 }
 
 .mode {
